--- a/style.css
+++ b/style.css
@@ -1,64 +1,58 @@
 /*@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 
-html, body {
-    font-family: verdana;
-}
-h2{
-text-align: center;
-color: rgb(0, 0, 0);
-font-weight: normal;
-font-family: 'Open Sans', sans-serif;
+html,
+body {
+  font-family: verdana;
 }
 
-#form {
-    margin: 0;
-    position: absolute;
-    border-radius: 5px;
-    padding: 20px 30px ;
-    width: 300px;
-    -webkit-box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.35);
-    box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.35);
+h2 {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-weight: normal;
+  font-family: "Open Sans";
+}
+
+#form-dev {
+  margin: 0;
+  position: relative;
+  border-radius: 5px;
+  padding: 20px 30px;
+  width: 300px;
+  -webkit-box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.35);
 }
 
 .regform {
-    position:absolute;
-    padding: 10px;
-    border-radius: 5px;
-    border: 2px solid rgba(0, 0, 0, 0.115);
-    width: 76%;
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.700);
-        
+  padding: 10px;
+  border-radius: 5px;
+  border: 2px solid rgba(0, 0, 0, 0.115);
+  width: 92%;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.7);
 }
-/*
-input[type="text"] {
-    
-  }
-*/
+
 label {
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.700);
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.7);
 }
 .button {
-    width: 100%;
-    height: 40px;
-    background-color: rgb(9, 170, 245);
-    color: white;
-    border-radius: 5px;
-    border: none;
-    font-size: 18px;
+  width: 100%;
+  height: 40px;
+  background-color: rgb(9, 170, 245);
+  color: white;
+  border-radius: 5px;
+  border: none;
+  font-size: 18px;
 }
 
 .button:hover {
-    border: 2px solid grey;
-
+  border: 2px solid grey;
 }
 
-p {
-    position:relative;
-    text-align: left;
-    font-size: small;
-    color: red;
-    padding-top: 15px;
+.error {
+  margin-top: 2px;
+  text-align: left;
+  font-size: small;
+  color: red;
 }
