--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ h2 {
 }
 
 #form-dev {
-  margin: 30px;
+  margin: auto;
   margin-top: 50px;
   position: relative;
   border-radius: 5px;
   padding: 20px 30px;
-  width: fit-content;
+  width: 300px;
   /*height: fit-content;*/
   -webkit-box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.35);
